Fixed the navbar and toggler

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -9,13 +9,13 @@ body{
 
 
 h1 {
-  color: gray;
+  color: silver;
 }
 
 a {
-  color: gray;
+  color: silver;
 }
 
 p {
-  color: gray;
+  color: silver;
 }
